<resources>
    <string name="app_name">DIBN</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>

    <!-- Home -->
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>
    <string name="wood">목공예</string>
    <string name="metal">금속공예</string>
    <string name="leather">가죽공예</string>
    <string name="etc">기타</string>

    <!-- Item -->
    <string name="shop">공방 이름</string>
    <string name="creator">아티스트 정보: 홍길동</string>
    <string name="price">DIBN 구매가 </string>
    <string name="period">예상 제작 기간</string>

    <!-- MyPage -->
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>

</resources>