<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.main.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="10dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dibn_title"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:paddingStart="10dp"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/search"/>
            <EditText
                android:focusable="false"
                android:id="@+id/edittext_home"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_edittext"
                android:maxLength="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:background="@drawable/shadow">
        <TextView
            android:id="@+id/home_wood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wood"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/home_metal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metal"
            android:textStyle="bold"
            android:textColor="@color/blackForText"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/home_leather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leather"
            android:textSize="15sp"
            android:textColor="@color/blackForText"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"/>

        <TextView
            android:textStyle="bold"
            android:id="@+id/home_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etc"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/blackForText"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:nestedScrollingEnabled="false">
    </androidx.recyclerview.widget.RecyclerView>

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/home_tab"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:tabBackground="@color/white"-->
<!--            app:tabIndicatorColor="#8AAAE5"-->
<!--            app:tabSelectedTextColor="#8AAAE5" />-->
<!--        <androidx.viewpager2.widget.ViewPager2-->
<!--            android:id="@+id/home_viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:fitsSystemWindows="true"-->
<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

</LinearLayout>