<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/item_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_main_img"
                app:layout_collapseMode="parallax"
                android:src="@drawable/dibn_logo"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/app_name"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:layout_marginBottom="?attr/actionBarSize"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HELLO!!"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"/>
            <TextView
                android:id="@+id/shop_name"
                android:paddingVertical="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/artist_name"
                android:paddingVertical="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="39,000원"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3일"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingVertical="10dp"
                    android:gravity="center"
                    android:id="@+id/detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="상품 정보"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:paddingVertical="10dp"
                    android:gravity="center"
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="리뷰"
                    android:textStyle="bold"
                    android:textColor="@color/blackForText"
                    android:textSize="15sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="20dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="15dp"
                    android:gravity="center"
                    android:id="@+id/item_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="안녕하세요 디라이트 공방입니다!

    이 상품은 아티스트 홍길동 님의 레시피로 제작하는 주얼리 세트입니다 :)
    제작 기간은 3~4일 정도 소요됩니다!

    따라서 주문날부터 배송완료까지는 5~6일 정도 소요된다고 보시면 될 것 같아요~

    자수정은 다른 컬러 큐빅으로 변경 가능하니 요청사항에 원하시는 색 써주시면 됩니다!
    (흰색, 검은색, 분홍색, 파란색 가능)"
                    android:textStyle="bold"
                    android:textColor="@color/blackForText"
                    android:textSize="15sp"
                    android:paddingVertical="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="20dp"/>
            </FrameLayout>
            <Button
                android:id="@+id/btn_order"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="주문하기"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/btn_selector"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>